--- a/src/app/car-parts.component.html
+++ b/src/app/car-parts.component.html
@@ -1,12 +1,14 @@
 <h2>Car Parts</h2>
 <p>There are {{ totalCarParts() }} total parts in stock</p>
-<ul>
+<ul class="parts">
   <li *ngFor="let carPart of carParts" [class.featured]="carPart.featured">
     <img [src]="imageBasePath + carPart.image">
     <h2>{{ carPart.name | uppercase }}</h2>
     <p>{{ carPart.description }}</p>
     <p *ngIf="carPart.inStock > 0">{{ carPart.inStock }} in Stock</p>
     <p *ngIf="carPart.inStock === 0">Out of Stock</p>
-    <p>{{ carPart.price | currency:'EUR':true }}</p>
+    <p>Price: <span class="price">{{ carPart.price | currency:'EUR':true }}</span>
+    <span class="quantity"><button class="quantity-btn quantity-decrease" type="button" (click)="downQuantity(carPart)">-</button> {{ carPart.quantity }} <button class="quantity-btn quantity-increase" type="button" (click)="upQuantity(carPart)">+</button></span>
+    </p>
   </li>
 </ul>
