Fixed ngModel error

--- a/src/app/car-parts.component.css
+++ b/src/app/car-parts.component.css
@@ -30,6 +30,13 @@
     margin-left: 1rem;
 }
 
+.quantity-text {
+    background-color: rgba(0, 0, 0, .5);
+    color: white;
+    width: auto;
+    text-align: center;
+}
+
 .quantity-btn {
   background: #000;
   border-radius: 3px;
