--- a/src/app/car-parts.component.html
+++ b/src/app/car-parts.component.html
@@ -10,7 +10,7 @@
     <p>Price: <span class="price">{{ carPart.price | currency:'EUR':true }}</span> 
     <span class="quantity">
       <button class="quantity-btn quantity-decrease" type="button" (click)="downQuantity(carPart)">-</button> 
-      <input class="quantity-text" type="text" [(ngModel)]="carPart.quantity" size="3">
+      <input class="quantity-text" type="text" [(ngModel)]="carPart.quantity" (blur)="validateQuantity(carPart)" size="3">
       <button class="quantity-btn quantity-increase" type="button" (click)="upQuantity(carPart)">+</button>
     </span>
     </p>
